force-app/main/default/objects/copado__TestType__mdt/fields/copado__Category__c.field-meta.xml
<CustomField>
    <fullName>copado__Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>