force-app/main/default/objects/copado__TestType__mdt/fields/copado__ExecuteVia__c.field-meta.xml
<CustomField>
    <fullName>copado__ExecuteVia__c</fullName>
    <label>Deprecated - ExecuteVia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>