force-app/main/default/objects/copado__TestType__mdt/fields/copado__JobTemplate__c.field-meta.xml
<CustomField>
    <fullName>copado__JobTemplate__c</fullName>
    <description>Job Template with the Job Steps to perform the related test type execution logic</description>
    <label>JobTemplate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>