force-app/main/default/objects/copado__TestType__mdt/fields/copado__Namespace__c.field-meta.xml
<CustomField>
    <fullName>copado__Namespace__c</fullName>
    <label>Deprecated - Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>