force-app/main/default/objects/copado__TestType__mdt/fields/copado__Tool__c.field-meta.xml
<CustomField>
    <fullName>copado__Tool__c</fullName>
    <label>Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>